# Wayfarer

./: Cargo.toml  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
assets/: io.github.silkepilon.Wayfarer.desktop
macos/: Info.plist
src/: application.rs  config.rs  controller.rs  main.rs  terrain.rs  window.rs
src/engine/: dji.rs  litchi.rs  mapping.rs  mod.rs
src/models/: camera.rs  mission.rs  mod.rs
src/widgets/: map_view.rs  mod.rs  projects_page.rs
windows/: installer.nsi
